# dynamodb-crud

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: release.yml  validate.yml
src/: common.rs  lib.rs  read.rs  write.rs
src/common/: condition.rs  key.rs  selection.rs
src/read/: batch_get_item.rs  common.rs  get_item.rs  query.rs  scan.rs
src/write/: batch_write_item.rs  common.rs  delete_item.rs  put_item.rs  update_item.rs
