[package]
name = "dynamodb-crud"
version = "0.1.6"
edition = "2024"
description = "a type-safe, ergonomic interface for performing CRUD operations on Amazon DynamoDB tables"
license = "MIT"
authors = [
    "dariocurr <dariocurr@users.noreply.github.com>",
]
repository = "https://github.com/dariocurr/dynamodb-crud"
homepage = "https://github.com/dariocurr/dynamodb-crud"
documentation = "https://docs.rs/dynamodb-crud"
keywords = [
    "aws",
    "crud",
    "database",
    "dynamodb",
    "nosql",
]
categories = [
    "api-bindings",
    "database",
    "web-programming",
]
readme = "README.md"

[dependencies]
aws-sdk-dynamodb = "1"
indexmap = "2"
serde = "1"

[dependencies.serde_dynamo]
version = "4"
features = [
    "aws-sdk-dynamodb+1",
]

[dependencies.tracing]
optional = true
version = "0"

[dev-dependencies]
rstest = "0"
serde_json = "1"

[features]
default = [
]
tracing = [
    "dep:tracing",
]
